# fastapi-app-template

./: .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  tasks.py  template.yaml
devops/: Dockerfile
skeleton/: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  tasks.py
skeleton-postgres/src/{{ values.module_name }}/database/: engine.py
skeleton-postgres/src/{{ values.module_name }}/foo/: models.py  repositories.py  services.py
skeleton-redis/src/{{ values.module_name }}/redis/: cache.py  client.py
skeleton-redis/src/{{ values.module_name }}/web/: cache.py
skeleton/devops/: Dockerfile
skeleton/src/{{ values.module_name }}/: __main__.py
skeleton/src/{{ values.module_name }}/auth/: services.py
skeleton/src/{{ values.module_name }}/config/: app.py  jwt.py  log.py
skeleton/src/{{ values.module_name }}/core/: constants.py  enums.py  log.py  schemas.py
skeleton/src/{{ values.module_name }}/web/: __main__.py  asgi.py  deps.py  exceptions.py  utils.py
skeleton/src/{{ values.module_name }}/web/middlewares/: logging.py
skeleton/src/{{ values.module_name }}/web/routers/: v1.py
src/fastapi_template/: __main__.py
src/fastapi_template/auth/: services.py
src/fastapi_template/config/: app.py  log.py  redis.py
src/fastapi_template/core/: constants.py  exceptions.py  log.py
src/fastapi_template/database/: engine.py
src/fastapi_template/foo/: repositories.py  schemas.py  services.py
src/fastapi_template/redis/: cache.py  client.py
src/fastapi_template/web/: __main__.py  asgi.py  cache.py  deps.py  exceptions.py
(+4 files in other folders)
