[project]
name = "{{ values.service_name }}"
version = "0.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    {% if values.enable_postgres %}
    "sqlmodel (>=0.0.37,<0.0.38)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    {% endif %}
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    {% if values.enable_redis %}
    "redis (>=5.0.0,<6.0.0)",
    {% endif %}
]

[tool.poetry]
packages = [{include = "{{ values.module_name }}", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "invoke (>=2.2.1,<3.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "autoflake (>=2.3.3,<3.0.0)",
    "isort (>=8.0.1,<9.0.0)",
]


[tool.autoflake]
expand-star-imports = true
remove-all-unused-imports = true
recursive = true
remove-unused-variables = true
in-place = true

[tool.isort]
profile = "black"
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = "LOCALFOLDER"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
